# metaheuristicas

./: .gitignore  LocalSearch.prof  README.md  makefile  metaheuristicas.cabal  toLatex.sh
data/: Ageblx.table  Ageca.table  Aggblx.table  Aggca.table  AmAll.table  AmBest.table  AmNew.table  AmProb.table  DECurrent.table  DERand.table  ILS.table  LocalSearch.table  LocalSearch2.table  Onenn.table  Relief.table  SimulatedAnnealing.table  ageblx-parkinsons-best.csv  ageca-parkinsons-best.csv  aggblx-parkinsons-diversity.csv  amall-parkinsons-diversity.csv  amnew-parkinsons-diversity.csv  ozone-320.arff.1nn.report  ozone-320.arff.1nn.report1  ozone-320.arff.Ageblx.report  ozone-320.arff.Ageblx.sol1  ozone-320.arff.Ageblx.sol2  ozone-320.arff.Ageblx.sol3  ozone-320.arff.Ageblx.sol4  ozone-320.arff.Ageblx.sol5  ozone-320.arff.Ageca.report  ozone-320.arff.Ageca.sol1  ozone-320.arff.Ageca.sol2  ozone-320.arff.Ageca.sol3  ozone-320.arff.Ageca.sol4  ozone-320.arff.Ageca.sol5  ozone-320.arff.Aggblx.report  ozone-320.arff.Aggblx.sol1  ozone-320.arff.Aggblx.sol2  ozone-320.arff.Aggblx.sol3  ozone-320.arff.Aggblx.sol4  (+291 more)
doc/: Bibliography.bib  memoria.org  memoria2.org  memoria3.org  tablas.ods
source/: Algorithms.hs  Base.hs  Input.hs  Main.hs
src/: Ageblx.hs  Ageca.hs  Aggblx.hs  Aggca.hs  AmAll.hs  AmBest.hs  AmNew.hs  AmProb.hs  Base.hs  DECurrent.hs  DERand.hs  Fivefold.hs  Genetic.hs  ILS.hs  Individual.hs  Input.hs  LeaveOneOut.hs  LocalSearch.hs  LocalSearch2.hs  LocalSearchVector.hs  Main.hs  Normal.hs  Onenn.hs  Population.hs  Relief.hs  Scorer.hs  SimulatedAnnealing.hs  (+3 more)
(+1 files in other folders)
